<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/instance"
        android:title="@string/menu_instance">
        <menu>
            <item
                android:id="@+id/instance_view"
                android:title="@string/menu_view"/>

            <item
                android:id="@+id/instance_edit"
                android:title="@string/menu_edit"/>

            <item
                android:id="@+id/instance_late"
                android:title="@string/menu_late"/>

            <item
                android:id="@+id/instance_cancel"
                android:title="@string/menu_cancel"/>
        </menu>

    </item>

    <item
        android:id="@+id/master"
        android:title="@string/menu_master">

        <menu>
            <item
                android:id="@+id/master_view"
                android:title="@string/menu_view"/>

            <item
                android:id="@+id/master_edit"
                android:title="@string/menu_edit"/>

            <item
                android:id="@+id/master_cancel"
                android:title="@string/menu_cancel"/>
        </menu>
    </item>
</menu>