<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".NewMeetingActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            style="@style/TopButton"
            android:text="@string/caption_save"
            android:layout_alignParentEnd="true"
            android:id="@+id/ok"
            android:minWidth="90dp"
            android:onClick="onDoneButtonClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </RelativeLayout>

    <EditText
        style="@style/Editable"
        android:hint="@string/caption_subject"
        android:id="@+id/title"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="5dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginEnd="0dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DateEntry"
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/recurrentDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <LinearLayout
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/caption_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        style="@style/DateEntry"
                        android:id="@+id/startTime"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/caption_to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        style="@style/DateEntry"
                        android:id="@+id/endTime"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="5dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:text="@string/caption_all_day"
                android:id="@+id/all_day"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <Button
                style="@style/BButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/caption_recurrence"
                android:onClick="onRecurrence"
                android:id="@+id/recurrence"
                />

            <Button
                style="@style/BButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/caption_time_slots"
                android:onClick="onSuggestions"
                android:id="@+id/suggestions"
                />

            <Button
                style="@style/BButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/caption_asap"
                android:onClick="onASAP"
                android:id="@+id/asap"
                />
        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            style="@style/Editable"
            android:hint="@string/hint_location"
            android:layout_gravity="center_vertical"
            android:layout_weight="74"
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />

        <Button
            style="@style/BButton"
            android:layout_marginStart="4dp"
            android:layout_width="0dp"
            android:layout_weight="24"
            android:layout_height="wrap_content"
            android:text="@string/caption_find_room"
            android:onClick="onFindRoom"
            android:id="@+id/findRoom"
            />

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="5dp" />

    <EditText
        style="@style/Editable"
        android:layout_weight="50"
        android:hint="@string/hint_description"
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caption_attendees"
        />

    <ListView
        style="@style/List"
        android:layout_weight="20"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="1dp"
        android:id="@+id/attendees"
        />

    <Button
        style="@style/BButton"
        android:id="@+id/addAttendee"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1dp"
        android:text="@string/caption_add_attendee"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>
